--- a/styles.css
+++ b/styles.css
@@ -15,8 +15,9 @@ body {
      background-position: center;
      image-rendering: -webkit-optimize-contrast;
      display: flex;
-     justify-content: left;
-     align-items: flex-end;
+     flex-direction: column;
+     justify-content: center;
+     align-items: center;
 }
 main {
     width: 90%;
@@ -131,6 +132,16 @@ span {
    text-align: left;
    padding-left: 10px;
    background-color: #000000;
+}
+
+#directoryWindows {
+    width: 80%;
+    height: calc(100% - 35%);
+    background-color: #000000;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    padding: 5px 10px;
 }
 
 @media (max-width: 768px) {
