--- a/styles.css
+++ b/styles.css
@@ -40,6 +40,7 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 5px 10px; 
+    overflow: hidden;
 
 }
 #headerIcons {
@@ -57,9 +58,9 @@ i {
     margin: 5px;
     
 }
-#tab {
+.tab {
     background-color: #0000003a;
-    width: 50%;
+    width: auto;
     height:85%;
     border-radius: 5px 5px 0px 0px ;
     margin-top: 1%;
@@ -137,11 +138,17 @@ span {
 #directoryWindows {
     width: 80%;
     height: calc(100% - 35%);
-    background-color: #000000;
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     align-items: center;
     padding: 5px 10px;
+    margin-top: 1%;
+}
+.section{
+    background-color: rgb(189, 187, 187);
+    width: calc(100% - 10%);
+    height: calc(100%);
+    border-radius: 20px 10px 0px 0px 
 }
 
 @media (max-width: 768px) {
