--- a/styles.css
+++ b/styles.css
@@ -145,10 +145,20 @@ span {
     margin-top: 1%;
 }
 .section{
-    background-color: rgb(189, 187, 187);
+    background-color: rgb(250, 250, 250);
     width: calc(100% - 10%);
     height: calc(100%);
-    border-radius: 20px 10px 0px 0px 
+    border-radius: 20px 10px 10px 10px 
+}
+#projectGrid {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 10px;
+    padding: 10px;
+}
+.dynamic-span {
+    background-color: rgb(248, 248, 248);
+    font-size: 1rem;
 }
 
 @media (max-width: 768px) {
