--- a/styles.css
+++ b/styles.css
@@ -148,17 +148,25 @@ span {
     background-color: rgb(250, 250, 250);
     width: calc(100% - 10%);
     height: calc(100%);
-    border-radius: 20px 10px 10px 10px 
+    border-radius: 20px 10px 10px 10px; 
+    overflow-y: scroll;
 }
 #projectGrid {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 10px;
     padding: 10px;
+    gap: 15px;
+    
 }
 .dynamic-span {
     background-color: rgb(248, 248, 248);
-    font-size: 1rem;
+    padding: 8px;
+    border-radius: 5px;
+    text-align: center;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    width: 100%;
+    font-size: 0.8rem;
 }
 
 @media (max-width: 768px) {
@@ -182,11 +190,27 @@ span {
         font-size: 1.2rem;
         margin: 0 0.3rem;
     }
+    #projectGrid {
+        grid-template-columns: 1fr 1fr;
+    }
+    .dynamic-span {
+        font-size: 0.7rem; /* Reduce size of the dynamic span */
+    }
+
 }
 
 @media (max_width: 480px) {
     #headerIcons i {
         font-size: 1rem;
         margin: 0 0.2rem
+    }
+    i {
+        font-size: 1rem;
+    }
+    #projectGrid {
+        grid-template-columns: 1fr;
+    }
+    .dynamic-span {
+        font-size: 0.5rem; /* Reduce size of the dynamic span */
     }
 }
